RP-853 The reporting function has been enhanced to include English Preferred Term and its Case Significance.